[tool.poetry]
name = "pandoc-runblocks"
version = "0.1.0.dev"
description = "A pandoc filter for running code blocks"
authors = ["Oliver Sherouse <oliver@oliversherouse.com>"]
packages = [{include = "pandoc_runblocks.py"}]

[tool.poetry.dependencies]
python = ">3.5"
pandocfilters = "^1.4"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
ipython = "^7.7"
pytest-flake8 = "^1.0"

[tool.poetry.scripts]
pandoc-runblocks = "pandoc_runblocks:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
